Migrating unit test project
Utilizing a more generic folder that is ignored by mod compilation, so I can add more projects without adding more compile ignore rules.

--- a/ModIgnore/TManagerAgentTest/TManagerAgentTest.csproj
+++ b/ModIgnore/TManagerAgentTest/TManagerAgentTest.csproj
@@ -12,12 +12,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TManagerAgent.csproj" />
+    <ProjectReference Include="..\..\TManagerAgent.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\..\references\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\..\..\..\references\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
 
