--- a/TManagerAgent.csproj
+++ b/TManagerAgent.csproj
@@ -11,9 +11,9 @@
     <Exec Command="&quot;$(tMLBuildServerPath)&quot; -build $(ProjectDir) -eac $(TargetPath) -define $(DefineConstants) -unsafe $(AllowUnsafeBlocks)" />
   </Target>
   <ItemGroup>
-    <CSFile Include="*.cs" Exclude="TManagerAgentTest\**" />
-    <Compile Remove="TManagerAgentTest\**" />
-    <EmbeddedResource Remove="TManagerAgentTest\**" />
-    <None Remove="TManagerAgentTest\**" />
+    <CSFile Include="*.cs" Exclude="ModIgnore\**" />
+    <Compile Remove="ModIgnore\**" />
+    <EmbeddedResource Remove="ModIgnore\**" />
+    <None Remove="ModIgnore\**" />
   </ItemGroup>
 </Project>
